[gd_scene load_steps=10 format=2]

[ext_resource path="res://Buttons/MenuButton.gd" type="Script" id=1]
[ext_resource path="res://Pictures/Options.png" type="Texture" id=2]
[ext_resource path="res://BaseGame/Options.gd" type="Script" id=3]
[ext_resource path="res://Buttons/GameMenu/Back.tscn" type="PackedScene" id=4]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=5]
[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://BaseGame/HSlider.gd" type="Script" id=7]
[ext_resource path="res://Music/520579__divoljud__clickglass.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 6 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 228.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 232.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1040.0
margin_bottom = 328.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/CenterRow/Buttons"]
margin_right = 1040.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/HBoxContainer"]
margin_right = 960.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Windowed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Menu/CenterRow/Buttons/HBoxContainer"]
margin_left = 964.0
margin_right = 1040.0
margin_bottom = 60.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/CenterRow/Buttons"]
margin_top = 80.0
margin_right = 1040.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/HBoxContainer2"]
margin_right = 518.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Menu/CenterRow/Buttons/HBoxContainer2"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
script = ExtResource( 7 )
audio_bus_name = "Music"

[node name="HBoxContainer3" type="HBoxContainer" parent="Menu/CenterRow/Buttons"]
margin_top = 160.0
margin_right = 1040.0
margin_bottom = 220.0

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/HBoxContainer3"]
margin_right = 518.0
margin_bottom = 60.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.886275, 0.564706, 0.0666667, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "FX Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Menu/CenterRow/Buttons/HBoxContainer3"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
script = ExtResource( 7 )
audio_bus_name = "FX"

[node name="Back" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 240.0
margin_right = 1040.0
margin_bottom = 328.0
script = ExtResource( 1 )
scene_to_load = "res://TitleScreen.tscn"

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "FX"
[connection signal="toggled" from="Menu/CenterRow/Buttons/HBoxContainer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="Menu/CenterRow/Buttons/HBoxContainer2/HSlider" to="Menu/CenterRow/Buttons/HBoxContainer2/HSlider" method="_on_value_changed"]
[connection signal="value_changed" from="Menu/CenterRow/Buttons/HBoxContainer3/HSlider" to="Menu/CenterRow/Buttons/HBoxContainer3/HSlider" method="_on_value_changed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Back" to="." method="_on_Back_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
